--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+h1, h2, h3, h4, a{
+  font-family: "Tektur", sans-serif;
+  font-stretch: semi-condensed;
+}
+
+p{
+  font-family: "IBM Plex Sans", sans-serif;
+}
