--- a/src/Components/Banner/banner.css
+++ b/src/Components/Banner/banner.css
@@ -11,16 +11,17 @@
     text-align: center;
     padding-top: 6rem;
     text-transform: uppercase;
+    color: black;
 }
 
 .banner .slogan{
 font-size: 2rem;
 text-align: center;
 padding: 1rem 2rem;
+color: black;
 }
 
 .banner .boton{
-    
         display: block;
         margin: 1rem auto;
         padding: 0.75rem 0;
@@ -30,7 +31,6 @@ padding: 1rem 2rem;
         background-color: red;
         color: white;
         text-align: center;
-      
 }
 
 .btn:hover{
