--- a/src/Components/Banner/banner.css
+++ b/src/Components/Banner/banner.css
@@ -1,5 +1,5 @@
 .banner{
-    background: url('../../../src/IMG/Index/testHeader.jpg') no-repeat center center;
+    background: url('../../../src/IMG/Index/header.webp') no-repeat center center;
      background-size: cover; 
    width: 100%; 
     height: 80vh;
